--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <h1>Rock, Paper, Scissors!</h1>
+
+    <p class="instructions">Select an option below to begin</p>
+
+    <p class="score-title">Score</p>
+
+    <p class="score">0-0</p>
+
+    <div class="options">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
 </body>
 </html>
